package com.libreria.model.book;

public enum Avaliavility {
    AVALIABLE,
    RESERVED,
    NOT_AVALIABLE
}
