package com.libreria.model.exchange.OrderState;

public enum OrderState {
    PENDING,
    SENDED,
    IN_DISTIBUITION,
    DELIVERED
}
